// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`URLPopover matches the snapshot in its default state 1`] = `
<Popover
  className="block-editor-url-popover"
  focusOnMount="firstElement"
  position="bottom center"
>
  <div
    className="block-editor-url-popover__input-container"
  >
    <div
      className="block-editor-url-popover__row"
    >
      <div>
        Editor
      </div>
      <ForwardRef(Button)
        aria-expanded={false}
        className="block-editor-url-popover__settings-toggle"
        icon="arrow-down-alt2"
        label="Link settings"
        onClick={[Function]}
      />
    </div>
  </div>
</Popover>
`;

exports[`URLPopover matches the snapshot when the settings are toggled open 1`] = `
<Popover
  className="block-editor-url-popover"
  focusOnMount="firstElement"
  position="bottom center"
>
  <div
    className="block-editor-url-popover__input-container"
  >
    <div
      className="block-editor-url-popover__row"
    >
      <div>
        Editor
      </div>
      <ForwardRef(Button)
        aria-expanded={true}
        className="block-editor-url-popover__settings-toggle"
        icon="arrow-down-alt2"
        label="Link settings"
        onClick={[Function]}
      />
    </div>
    <div
      className="block-editor-url-popover__row block-editor-url-popover__settings"
    >
      <div>
        Settings
      </div>
    </div>
  </div>
</Popover>
`;

exports[`URLPopover matches the snapshot when there are no settings 1`] = `
<Popover
  className="block-editor-url-popover"
  focusOnMount="firstElement"
  position="bottom center"
>
  <div
    className="block-editor-url-popover__input-container"
  >
    <div
      className="block-editor-url-popover__row"
    >
      <div>
        Editor
      </div>
    </div>
  </div>
</Popover>
`;
